add config save, tiers registrations and register island command

--- a/resources/config.yml
+++ b/resources/config.yml
@@ -1,20 +1,30 @@
 commands:
-  create: ""
-  go: ""
-  member: ""
-  info: ""
-  delete: ""
-  invite: ""
-  accept: ""
-  deny: ""
-  top: ""
-  help: ""
+  create: "Permet de creer son île"
+  go: "Permet de se téléporter à son île"
+  members: "Permet de voir la liste des membres de son île et leur rank"
+  info: "Donne leur niveau en tiers, le nombre de membres"
+  delete: "Permet de supprimer son île"
+  invite: "Permet d'envoyer une invitation à un joueur pour rejoindre son île"
+  accept: "Permet de rejoindre l'île dans lasquelle on à été inviter"
+  deny: "Permet de refuser l'invitation"
+  top: "Affiche l'île avec le plus grand level de tiers"
+  help: "Affiche toutes les commandes du Plugin de OneBlock"
   leave: "Permet de quitter l'île si on est pas le fondateur de l'île"
   promote: "Permet de monter en grade un membre de son île"
   kick: "Permet de kick un joueur de l'île"
   visit: "Permet de visiter l'ile d'un joueur"
   setspawn: "Permet de definir de le point de spawn de l'île"
+  default: "Commande de l'ile"
 
 messages:
+  prefix:
+    success: "§a[§fOneBlock§a] "
+    error: "§c[§fOneBlock§c] "
+
+  island_created: "Votre île viens d'être crée avec succès"
+  island_deleted: "Votre île viens d'être supprimée avec succès"
+  already_in_island: "Vous êtes déjà dans une île, veuillez la quité ou la supprimer avant de créer une nouvelle"
+  island_doesnt_exist: "L'île §f{ISLAND} §an'existe pas"
+
   help-top: "§a---- Liste des commandes ----"
-  help-line: "§a/{COMMAND}: §f{DESCRIPTION}"
+  help-line: "§a/is {COMMAND}: §f{DESCRIPTION}"
