--- a/resources/config.yml
+++ b/resources/config.yml
@@ -23,6 +23,10 @@ messages:
     error: "§c[§fOneBlock§c] "
 
   # Visitors
+
+  island_locked: "Votre île viens d'être fermé au publique"
+  island_unlocked: "Votre île viens d'être ouvert au publique"
+
   island_visit_teleported: "Vous venez d'être téléporté à l'île de {OWNER}, vous êtes actuellement en mode de jeu: §f{GAMEMODE}"
   island_cant_visit: "L'île de §f{OWNER} §cest actuellement fermé au publique, demandez lui d'ouvrir l'île au publique pour pouvoir la visiter"
   island_kick_to_locked: "L'île viens de fermé ces portes au publique, vous venez d'être téléporté sur votre île"
@@ -40,6 +44,9 @@ messages:
 
   island_teleported: "Vous avez été téléporté à votre île"
   island_setspawn_success: "Vous avez définis le point d'apparition sur l'île de {OWNER} au coordonnées: §fX: {X}§a, §fY: {Y}§a, §fZ: {Z}"
+
+  island_already_locked: "Votre île est déjà fermé au publique"
+  island_already_unlocked: "Votre île est déjà ouvert au publique"
 
   island_kick_success: "Vous venez d'expulser le joueur §f{PLAYER} §ade votre île"
   island_kicked: "Vous venez d'être expulsé de l'île de §f{OWNER}"
@@ -74,7 +81,7 @@ messages:
   setspawn_not_in_island: "Téléporter vous sur une île, pour pouvoir définir le point d'apparition de celle-ci"
   commands_visit: "Vous ne pouvez pas utiliser de commande de ce genre sur une île en tant que visiteur"
   no_permission: "Vous n'avez pas la permission d'executer la commande §f/is {PERMISSION}§c, vous devez avoir le grade d'île §f{RANK_TO} §cpour pouvoir l'executer, mais vous êtes actuellement en grade d'île §f{RANK_HAVE} §c!"
-  player_not_found: "Le joueur §f{PLAYER} §cn'est actuellement pas connecté"
+  player_not_found: "Le joueur §f{PLAYER} §cn'est actuellement pas connecté ou n'existe pas"
   kick_failed: "Le joueur §f{PLAYER} §ca un plus grand grade que vous dans une île, vous ne pouvez pas le kick"
   player_not_member: "Le joueur §f{PLAYER} §cn'est pas membre de votre île"
   player_island_not_exist: "Le joueur §f{PLAYER} §cne possède ou n'est membre d'aucunes îles"
@@ -89,3 +96,13 @@ messages:
   top-top: "§a---- Classement des îles ----"
   top-line-maxed: "#{ID} | Ile de {OWNER} avec un Tier de niveau maximum et {BLOCKS_BREAKED} blocs cassés"
   top-line: "#{ID} | Ile de {OWNER} avec un Tier {TIER_LEVEL} avec {BLOCKS_BREAKED} blocs cassés sur {TIER_BLOCKS_TO_BREAK}"
+
+  # Top
+  # Tags avaibles:
+  # {OWNER} {ID} {OWNER} {TIER_LEVEL} {BLOCKS_BREAKED} {TIER_BLOCKS_TO_BREAK}
+  members-top: "§a---- Membres de l'île ----"
+  members-line: "Le joueur §a{PLAYER} est §a{RANK}"
+
+  island-top: "§a---- Ile de {OWNER} ----"
+  island-line: "§fL'Ile est de de §aTier {TIER_LEVEL} §favec §a{BLOCKS_BREAKED} blocs §fcassés !"
+  island-line2: "§fIl y a un total de §a{MEMBERS} membres §fdans l'île"
