--- a/resources/island.yml
+++ b/resources/island.yml
@@ -25,6 +25,7 @@ spawn: # Y - 3 = Bedrock, Y - 2 = Be sure of your coordinates
   z: 0
 
 invitation_expiration_time: 30 # In seconds
+island_cooldown: 1200 # In seconds
 reteleport_at_y: 30
 
 # Avaible:
