--- a/resources/config.yml
+++ b/resources/config.yml
@@ -97,6 +97,10 @@ messages:
   xp-tip: "§a+1 | {TIER_NAME}\n§f{COUNT} blocs cassées"
   level-passed: "Votre niveau de l'île est passé de §f{OLD_TIER_NAME} §aà §f{NEW_TIER_NAME}"
 
+  # Bossbar
+  bb-title: "§aIle de {OWNER}"
+  bb-subtitle: "§f{COUNT} blocs cassées sur {MAX} | {TIER_NAME}"
+
   help-top: "§a---- Liste des commandes ----"
   help-line: "§a/is {COMMAND}: §f{DESCRIPTION}"
 
