points :white_check_mark:

--- a/resources/config.yml
+++ b/resources/config.yml
@@ -100,7 +100,8 @@ messages:
 
   # Help
   xp-tip: "§a+1 | {TIER_NAME}\n§f{COUNT} blocs cassées"
-  points-tip: "§a+{PTS_EARN} points"
+  points-earn-tip: "§a+{PTS_EARN} points"
+  points-lost-tip: "§c-{PTS_LOST} points"
 
   # Bossbar
   bb-title: "§aIle de {OWNER}"
