--- a/resources/forms.config.yml
+++ b/resources/forms.config.yml
@@ -20,4 +20,5 @@ leader_form:
   label: "§cSi§f l'ile §c{ISLAND_ID} §fest chargée, une fois les modifications appliquées, les membres seront déconnectés, et l'île sera déchargée."
   new_owner: "Nouveau propriétaire"
   new_rank: "Nouveau grade à l'ancien propriétaire"
-  message_success: "Vous avez changé le propriétaire de l'île §f{ISLAND_ID} §aà §f{NEW_OWNER}"
+  message_new_owner: "Le propriétaire de l'île est passé à §f{NEW_OWNER}§a. (ancien propriétaire: §f{OLD_OWNER}§a)"
+  message_success: "Vous avez changé le propriétaire de l'île §f{ISLAND_ID} §aà §f{NEW_OWNER}, le message de changement de grade a été envoyé au §f{COUNT_PING} membres §aconnectées actuellements"
