--- a/resources/forms.config.yml
+++ b/resources/forms.config.yml
@@ -21,4 +21,7 @@ leader_form:
   new_owner: "Nouveau propriétaire"
   new_rank: "Nouveau grade à l'ancien propriétaire"
   message_new_owner: "Le propriétaire de l'île est passé à §f{NEW_OWNER}§a. (ancien propriétaire: §f{OLD_OWNER}§a)"
-  message_success: "Vous avez changé le propriétaire de l'île §f{ISLAND_ID} §aà §f{NEW_OWNER}, le message de changement de grade a été envoyé au §f{COUNT_PING} membres §aconnectées actuellements"
+  message_success: "Vous avez changé le propriétaire de l'île §f{ISLAND_ID} §aà §f{NEW_OWNER}§a, le message de changement de grade a été envoyé au §f{COUNT_PING} membres §aconnectées actuellements"
+
+# Choose gamemode
+teleport_mode: 1 # 0 = survival, 1 = creative, 2 = adventure, 3 = spectator
